--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -19,13 +19,13 @@ jobs:
       - name: Set up Node.js
         uses: actions/setup-node@v3
         with:
-          node-version: 18
+          node-version: 20.16.0
 
       - name: Install Dependencies
         run: npm install
 
       - name: Build Vite App
-        run: npm run build
+        run: npm run build --verbose
 
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v2
