--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -25,11 +25,11 @@ jobs:
       - name: Install Dependencies
         run: npm ci
         
-      - name: Lint
-        run: npm run lint
+      # - name: Lint
+      #   run: npm run lint
         
-      - name: Test
-        run: npm test
+      # - name: Test
+      #   run: npm test
 
       - name: Build Vite App
         run: npm run build --verbose
