--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -50,7 +50,7 @@ jobs:
         id: meta
         uses: docker/metadata-action@v5
         with:
-          images: ${{ secrets.DOCKERHUB_USERNAME }}/vite-react-app
+          images: ${{ secrets.DOCKERHUB_USERNAME }}/inventory
           tags: |
             type=ref,event=branch
             type=ref,event=pr
