--- a/package.json
+++ b/package.json
@@ -14,9 +14,9 @@
     "@emotion/styled": "^11.14.0",
     "@mui/icons-material": "^6.4.1",
     "@mui/lab": "^6.0.0-beta.24",
-    "@mui/material": "^6.4.1",
+    "@mui/material": "^6.4.10",
+    "@mui/styled-engine-sc": "^7.0.1",
     "@mui/x-charts": "^7.24.1",
-    "@supabase/supabase-js": "^2.48.1",
     "@types/react-router": "^5.1.20",
     "@types/react-router-dom": "^5.3.3",
     "appwrite": "^17.0.0",
@@ -28,6 +28,7 @@
     "react-qr-code": "^2.0.15",
     "react-router": "^7.1.3",
     "react-router-dom": "^7.1.3",
+    "styled-components": "^6.1.17",
     "yup": "^1.6.1"
   },
   "devDependencies": {
